--- a/ShaBiDi/MainWindow.xaml
+++ b/ShaBiDi/MainWindow.xaml
@@ -2,23 +2,31 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:ShaBiDi.Properties"
-        Title="ShaBiDi - Exploitation / Visualisation / Analyse de données" Name="WelcomeWindow" SizeToContent="WidthAndHeight" ResizeMode="CanResize" WindowState="Maximized">
+        Title="ShaBiDi - Exploitation / Visualisation / Analyse de données" Name="WelcomeWindow" SizeToContent="WidthAndHeight" Width="{DynamicResource {x:Static SystemParameters.MaximizedPrimaryScreenWidthKey}}" Height="{DynamicResource {x:Static SystemParameters.MaximizedPrimaryScreenHeightKey}}" WindowStartupLocation="CenterScreen" WindowStyle="SingleBorderWindow" WindowState="Maximized">
     <StackPanel Name="spMainMenu">
-        <StackPanel Orientation="Horizontal" Name="spHead">
-            <Button Name="btnImport" Background="#00000000" BorderBrush="#00000000" Height="60" Margin="10,10,0,10" ToolTip="{x:Static local:Resources.toolTipImport}" Click="btnImport_Click">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Button Grid.Column="0" HorizontalAlignment="Left" Name="btnImport" Background="#00000000" BorderBrush="#00000000" Height="60" ToolTip="{x:Static local:Resources.toolTipImport}" Click="btnImport_Click">
                 <Image Source="/ShaBiDi;component/Resources/box-in.png"></Image>
             </Button>
-            <Button Name="btnSave" Background="#00000000" BorderBrush="#00000000" Height="60"  Margin="10,10,0,10" ToolTip="{x:Static local:Resources.toolTipSave}">
+            <Button Grid.Column="1" HorizontalAlignment="Left" Name="btnSave" Background="#00000000" BorderBrush="#00000000" Height="60" ToolTip="{x:Static local:Resources.toolTipSave}">
                 <Image Source="/ShaBiDi;component/Resources/floppy.png"></Image>
             </Button>
-            <Label Content="{x:Static local:Resources.mainTitle}" FontFamily="Segoe UI" FontSize="40" Padding="100,10,100,5" />
-            <Button Name="btnNotes" Background="#00000000" BorderBrush="#00000000" Height="60" Margin="10,10,0,10" ToolTip="{x:Static local:Resources.toolTipNotes1}">
-                <Image Source="/ShaBiDi;component/Resources/notepad.png"></Image>
-            </Button>
-            <Button Name="btnAdd" Background="#00000000" BorderBrush="#00000000" Height="60" Margin="10,10,0,10" ToolTip="{x:Static local:Resources.toolTipAdd}">
+            <Label Grid.Column="2" Content="{x:Static local:Resources.mainTitle}" FontFamily="Arial" FontSize="40" VerticalContentAlignment="Stretch" Margin="10,0,0,0" HorizontalAlignment="Center" HorizontalContentAlignment="Center"/>
+            <Button Grid.Column="3" Name="btnAdd" Background="#00000000" BorderBrush="#00000000" Height="60" ToolTip="{x:Static local:Resources.toolTipAdd}">
                 <Image Source="/ShaBiDi;component/Resources/sign-add.png"></Image>
             </Button>
-        </StackPanel>
+            <Button Grid.Column="4"  Name="btnNotes" Background="#00000000" BorderBrush="#00000000" Height="60" ToolTip="{x:Static local:Resources.toolTipNotes1}">
+                <Image Source="/ShaBiDi;component/Resources/notepad.png"></Image>
+            </Button>
+
+        </Grid>
         <TabControl Name="tabMainWindow" ItemsSource="{Binding}" SelectionChanged="tabMainWindow_SelectionChanged">
             <TabControl.Resources>
                 <DataTemplate x:Key="TabHeader" DataType="TabItem">
@@ -26,14 +34,12 @@
                         <Button Name="btnDelete" DockPanel.Dock="Right" Margin="5,0,0,0" Padding="0" Click="btnDelete_Click" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type TabItem}}, Path=Name}">
                             <Image Source="/ShaBiDi;component/Resources/close.png" Height="11" Width="11"></Image>
                         </Button>
-                        <TextBlock Text="{Binding RelativeSource={RelativeSource AncestorType={x:Type TabItem}}, Path=Header}"/>
+                        <TextBlock Text="{Binding RelativeSource={RelativeSource AncestorType=TabItem}, Path=Header}" FontFamily="Arial"/>
                     </DockPanel>
                 </DataTemplate>
-                
+                <Style TargetType="TextBox">
+                </Style>
             </TabControl.Resources>
-            <StackPanel Name="spTabMainWindow">
-                <StackPanel Orientation="Horizontal"></StackPanel>
-            </StackPanel>
         </TabControl>
     </StackPanel>
 </Window>
