--- a/ShaBiDi/MainWindow.xaml
+++ b/ShaBiDi/MainWindow.xaml
@@ -19,12 +19,13 @@
                 <Image Source="/ShaBiDi;component/Resources/floppy.png"></Image>
             </Button>
             <Label Grid.Column="2" Content="{x:Static local:Resources.mainTitle}" FontFamily="Arial" FontSize="40" VerticalContentAlignment="Stretch" Margin="10,0,0,0" HorizontalAlignment="Center" HorizontalContentAlignment="Center"/>
-            <Button Grid.Column="3" Name="btnAdd" Background="#00000000" BorderBrush="#00000000" Height="60" ToolTip="{x:Static local:Resources.toolTipAdd}">
-                <Image Source="/ShaBiDi;component/Resources/sign-add.png"></Image>
-            </Button>
-            <Button Grid.Column="4"  Name="btnNotes" Background="#00000000" BorderBrush="#00000000" Height="60" ToolTip="{x:Static local:Resources.toolTipNotes1}">
+            <Button Grid.Column="3"  Name="btnNotes" Background="#00000000" BorderBrush="#00000000" Height="60" ToolTip="{x:Static local:Resources.toolTipNotes1}">
                 <Image Source="/ShaBiDi;component/Resources/notepad.png"></Image>
             </Button>
+            <Button Grid.Column="4" Name="btnAdd" Background="#00000000" BorderBrush="#00000000" Height="60" ToolTip="{x:Static local:Resources.toolTipAdd}" Click="btnAdd_Click">
+                <Image Source="/ShaBiDi;component/Resources/sign-add.png"></Image>
+            </Button>
+
 
         </Grid>
         <TabControl Name="tabMainWindow" ItemsSource="{Binding}" SelectionChanged="tabMainWindow_SelectionChanged">
