--- a/ShaBiDi/TauxRecouvrement.xaml
+++ b/ShaBiDi/TauxRecouvrement.xaml
@@ -1,10 +1,12 @@
-﻿<Window x:Class="ShaBiDi.TauxRecouvrement"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:oxy="http://oxyplot.org/wpf"
-        xmlns:local="clr-namespace:ShaBiDi"
-        Title="TauxRecouvrement" Height="300" Width="300">
-    <StackPanel Name="Gr1">
-        <oxy:PlotView Name="Toto"></oxy:PlotView>
-    </StackPanel>
-</Window>
+﻿<UserControl x:Name="TauxRecouvrementUC" x:Class="ShaBiDi.TauxRecouvrement"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:oxy="http://oxyplot.org/wpf"
+             mc:Ignorable="d" 
+             d:DesignHeight="300" d:DesignWidth="300">
+    <Grid>
+        <oxy:PlotView x:Name="TauxRecouvrementPlot" Model="{Binding PlotModel}" Margin="10" Grid.Row="1"></oxy:PlotView>
+    </Grid>
+</UserControl>
