--- a/ShaBiDi/CreateIndicWindow.xaml
+++ b/ShaBiDi/CreateIndicWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="ShaBiDi.CreateIndicWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Création d'indicateur" Height="220" Width="400">
+        Title="Création d'indicateur" Height="372" Width="400">
     <StackPanel>
         <Label Content="Sélectionnez l'indicateur que vous souhaitez créer :">
         </Label>
@@ -23,6 +23,10 @@
             <Label Content="Modalité :"></Label>
             <CheckBox Name="cbS" Content="S" Margin="5" Checked="cbS_Checked" Unchecked="cbS_Unchecked"></CheckBox>
             <CheckBox Name="cbPA" Content="PA" Margin="5" Checked="cbPA_Checked" Unchecked="cbPA_Unchecked"></CheckBox>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal">
+            <Label Content="Groupe :"></Label>
+            <ListBox Width="300" Height="100" ItemsSource="{Binding}"></ListBox>
         </StackPanel>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
             <Button x:Name="btnCreateIndic" Content="Ok" Margin="10" Click="btnCreateIndic_Click"></Button>
