--- a/ShaBiDi/ImportWindow.xaml
+++ b/ShaBiDi/ImportWindow.xaml
@@ -1,10 +1,10 @@
 ﻿<Window x:Name="ImportWindow1" x:Class="ShaBiDi.ImportWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Importer vos fichiers" Height="353" Width="400" ResizeMode="NoResize">
+        Title="Importer vos fichiers" Height="384" Width="400" ResizeMode="NoResize">
     <StackPanel>
         <Label Content="Importer les fichiers"></Label>
-        <ListBox x:Name="lbImportedFiles" Height="200" ItemsSource="{Binding}">
+        <ListBox x:Name="lbImportedFiles" Height="200" ItemsSource="{Binding}" SelectionChanged="lbImportedFiles_SelectionChanged" SelectionMode="Multiple">
         </ListBox>
         <StackPanel Orientation="Horizontal" Margin="10,10,10,10" HorizontalAlignment="Center">
             <Button x:Name="btnAddFiles" Content="Ajouter des fichiers CSV" Margin="0,0,10,0" Click="btnAddFiles_Click"></Button>
@@ -13,15 +13,12 @@
         </StackPanel>
         <StackPanel Orientation="Vertical">
             <StackPanel Orientation="Horizontal">
-                <Label>Fichier(s) sélectionné(s) :</Label>
-                <ComboBox Width="240"></ComboBox>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
                 <Label>N° Groupe :</Label>
                 <Label Name="lblNumGroup" Width="10" Margin="0,0,50,0"></Label>
                 <Label>Ordre de passage :</Label>
                 <Label Name="lblOrdrePassage" Width="10"/>
             </StackPanel>
+            <ProgressBar Height="20" Margin="10,10,10,10"></ProgressBar>
 
         </StackPanel>
     </StackPanel>
