--- a/ShaBiDi/MainWindow.xaml
+++ b/ShaBiDi/MainWindow.xaml
@@ -8,21 +8,29 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <Button Grid.Column="0" HorizontalAlignment="Left" Name="btnImport" Background="#00000000" BorderBrush="#00000000" Height="60" Click="btnImport_Click">
+            <Label Grid.Column="0" Content="ShaBiDi" FontFamily="Arial" FontSize="40" VerticalContentAlignment="Stretch" Margin="10,10,100,10" HorizontalAlignment="Left" HorizontalContentAlignment="Left"/>
+            <Button Grid.Column="1" HorizontalAlignment="Right" HorizontalContentAlignment="Right" Name="btnImport" Background="#00000000" BorderBrush="#00000000" Height="60" Click="btnImport_Click" Margin="10,10,10,10">
                 <Image Source="/ShaBiDi;component/Resources/box-in.png"></Image>
-            </Button>
-            <Button Grid.Column="1" HorizontalAlignment="Left" Name="btnSave" Background="#00000000" BorderBrush="#00000000" Height="60">
+             </Button>
+            <Button Grid.Column="2" HorizontalAlignment="Right" Name="btnSave" Background="#00000000" BorderBrush="#00000000" Height="60" Margin="10,10,10,10">
                 <Image Source="/ShaBiDi;component/Resources/floppy.png"></Image>
             </Button>
-            <Label Grid.Column="2" Content="ShaBiDi" FontFamily="Arial" FontSize="40" VerticalContentAlignment="Stretch" Margin="10,0,0,0" HorizontalAlignment="Center" HorizontalContentAlignment="Center"/>
-            <Button Grid.Column="3"  Name="btnNotes" Background="#00000000" BorderBrush="#00000000" Height="60">
+            <Button Grid.Column="3" HorizontalAlignment="Right" Name="btnExport" Background="#00000000" BorderBrush="#00000000" Height="60" Margin="10,10,10,10">
+                <Image Source="/ShaBiDi;component/Resources/file-excel.png"></Image>
+            </Button>
+            <Button Grid.Column="4"  Name="btnNotes" Background="#00000000" BorderBrush="#00000000" Height="60" Margin="10,10,10,10">
                 <Image Source="/ShaBiDi;component/Resources/notepad.png"></Image>
             </Button>
-            <Button Grid.Column="4" Name="btnAdd" Background="#00000000" BorderBrush="#00000000" Height="60" Click="btnAdd_Click">
+            <Button Grid.Column="5" Name="btnCompare" Background="#00000000" BorderBrush="#00000000" Height="60" Margin="10,10,10,10">
+                <Image Source="/ShaBiDi;component/Resources/filter.png"></Image>               
+            </Button>
+            <Button Grid.Column="6" Name="btnAdd" Background="#00000000" BorderBrush="#00000000" Height="60" Click="btnAdd_Click" Margin="10,10,10,10">
                 <Image Source="/ShaBiDi;component/Resources/sign-add.png"></Image>
             </Button>
         </Grid>
