--- a/ShaBiDi/MainWindow.xaml
+++ b/ShaBiDi/MainWindow.xaml
@@ -27,7 +27,7 @@
             <Button Grid.Column="4"  Name="btnNotes" Background="#00000000" BorderBrush="#00000000" Height="60" Margin="10,10,10,10">
                 <Image Source="/ShaBiDi;component/Resources/notepad.png"></Image>
             </Button>
-            <Button Grid.Column="5" Name="btnCompare" Background="#00000000" BorderBrush="#00000000" Height="60" Margin="10,10,10,10">
+            <Button Grid.Column="5" Name="btnCompare" Background="#00000000" BorderBrush="#00000000" Height="60" Margin="10,10,10,10" Click="btnCompare_Click">
                 <Image Source="/ShaBiDi;component/Resources/filter.png"></Image>               
             </Button>
             <Button Grid.Column="6" Name="btnAdd" Background="#00000000" BorderBrush="#00000000" Height="60" Click="btnAdd_Click" Margin="10,10,10,10">
