--- a/ShaBiDi/Views/ImportWindow.xaml
+++ b/ShaBiDi/Views/ImportWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Name="ImportWindow1" x:Class="ShaBiDi.ImportWindow"
+﻿<Window x:Name="ImportWindow1" x:Class="ShaBiDi.Views.ImportWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Importer vos fichiers" Height="384" Width="550" ResizeMode="NoResize">
