--- a/ShaBiDi/Views/CompTauxRecouvrement.xaml
+++ b/ShaBiDi/Views/CompTauxRecouvrement.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Name="CompTauxRecouvrementUC" x:Class="ShaBiDi.CompTauxRecouvrement"
+﻿<UserControl x:Name="CompTauxRecouvrementUC" x:Class="ShaBiDi.Views.CompTauxRecouvrement"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
