--- a/ShaBiDi/Views/CompareIndicWindow.xaml
+++ b/ShaBiDi/Views/CompareIndicWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ShaBiDi.CompareIndicWindow"
+﻿<Window x:Class="ShaBiDi.Views.CompareIndicWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="CompareIndicWindow" Height="300" Width="300" Loaded="Window_Loaded">
