--- a/ShaBiDi/Views/MainWindow.xaml
+++ b/ShaBiDi/Views/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ShaBiDi.MainWindow"
+﻿<Window x:Class="ShaBiDi.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:ShaBiDi.Properties"
