--- a/ShaBiDi/Views/TauxRecouvrement.xaml
+++ b/ShaBiDi/Views/TauxRecouvrement.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Name="TauxRecouvrementUC" x:Class="ShaBiDi.TauxRecouvrement"
+﻿<UserControl x:Name="TauxRecouvrementUC" x:Class="ShaBiDi.Views.TauxRecouvrement"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
