--- a/ShaBiDi/Views/ResultWindow.xaml
+++ b/ShaBiDi/Views/ResultWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="ShaBiDi.Views.ResultWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="{Binding}" Height="Auto" Width="Auto">
+        Title="{Binding}" Height="Auto" Width="Auto" SizeToContent="WidthAndHeight">
     <Grid>
         
     </Grid>
