--- a/ShaBiDi/Views/TauxRecouvrementUC.xaml
+++ b/ShaBiDi/Views/TauxRecouvrementUC.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:oxy="http://oxyplot.org/wpf"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
+             Height="Auto" Width="Auto">
     <Grid>
         <oxy:PlotView x:Name="TauxRecouvrementPlot" Model="{Binding PlotModel}" Margin="10" Grid.Row="1"></oxy:PlotView>
     </Grid>
