--- a/ShaBiDi/Views/MainWindow.xaml
+++ b/ShaBiDi/Views/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:ShaBiDi.Properties"
-        Title="ShaBiDi - Exploitation / Visualisation / Analyse de données" Name="WelcomeWindow" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
+        Title="ShaBiDi | DataViz Tool" Name="WelcomeWindow" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
     <StackPanel Name="spMainMenu">
         <Grid>
             <Grid.ColumnDefinitions>
@@ -12,9 +12,11 @@
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
-                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <Label Grid.Column="0" Content="ShaBiDi" FontFamily="Arial" FontSize="40" VerticalContentAlignment="Stretch" Margin="10,20,10,10" HorizontalAlignment="Left" HorizontalContentAlignment="Left"/>
+            <StackPanel Grid.Column="0" Margin="10,10,10,10">
+                <TextBlock FontFamily="Arial" FontSize="40" HorizontalAlignment="Left">ShaBiDi</TextBlock>
+                <TextBlock FontFamily="Arial" FontSize="20" FontWeight="ExtraLight" HorizontalAlignment="Right">DataViz Tool</TextBlock>
+            </StackPanel>
             <Button Grid.Column="1" HorizontalAlignment="Right" HorizontalContentAlignment="Right" x:Name="btnImport" Background="#00000000" BorderBrush="#00000000" Click="btnImport_Click" Margin="10,10,10,10">
                 <StackPanel Height="Auto">
                     <Image Source="/ShaBiDi;component/Resources/box-in.png" Height="50" />
@@ -33,19 +35,13 @@
                     <TextBlock HorizontalAlignment="Center" FontSize="15">Extraire</TextBlock>
                 </StackPanel>
             </Button>
-            <Button Grid.Column="4"  x:Name="btnNotes" Background="#00000000" BorderBrush="#00000000" Margin="10,10,10,10">
-                <StackPanel Height="Auto">
-                    <Image Source="/ShaBiDi;component/Resources/notepad.png" Height="50"/>
-                    <TextBlock HorizontalAlignment="Center" FontSize="15">Commenter</TextBlock>
-                </StackPanel>
-            </Button>
-            <Button Grid.Column="5" x:Name="btnCompare" Background="#00000000" BorderBrush="#00000000" Margin="10,10,10,10" Click="btnCompare_Click">
+            <Button Grid.Column="4" x:Name="btnCompare" Background="#00000000" BorderBrush="#00000000" Margin="10,10,10,10" Click="btnCompare_Click">
                 <StackPanel Height="Auto">
                     <Image Source="/ShaBiDi;component/Resources/filter.png" Height="50"/>
                     <TextBlock HorizontalAlignment="Center" FontSize="15">Comparer</TextBlock>
                 </StackPanel>
             </Button>
-            <Button Grid.Column="6" x:Name="btnAdd" Background="#00000000" BorderBrush="#00000000" Click="btnAdd_Click" Margin="10,10,10,10">
+            <Button Grid.Column="5" x:Name="btnAdd" Background="#00000000" BorderBrush="#00000000" Click="btnAdd_Click" Margin="10,10,10,10">
                 <StackPanel Height="Auto">
                     <Image Source="/ShaBiDi;component/Resources/sign-add.png" Height="50"/>
                     <TextBlock HorizontalAlignment="Center" FontSize="15">Ajouter</TextBlock>
