--- a/ShaBiDi/Views/ImportWindow.xaml
+++ b/ShaBiDi/Views/ImportWindow.xaml
@@ -1,25 +1,18 @@
-﻿<Window x:Name="ImportWindow1" x:Class="ShaBiDi.Views.ImportWindow"
+﻿<Window x:Class="ShaBiDi.Views.ImportWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Importer vos fichiers" Height="384" Width="550" ResizeMode="NoResize">
-    <StackPanel>
-        <Label Content="Importer les fichiers"></Label>
-        <ListBox x:Name="lbImportedFiles" Height="200" ItemsSource="{Binding}" SelectionChanged="lbImportedFiles_SelectionChanged" SelectionMode="Multiple">
+        Title="Importation de fichiers" Height="400" Width="600" ResizeMode="NoResize" Closing="Window_Closing">
+    <StackPanel Margin="0,0,0,0">
+        <TextBlock Margin="10,10,10,5" FontWeight="Bold" FontSize="14">Importation de fichiers</TextBlock>
+        <ListBox x:Name="lbImportedFiles" Height="200" ItemsSource="{Binding}" SelectionMode="Multiple" Margin="10,10,10,10">
         </ListBox>
-        <StackPanel Orientation="Horizontal" Margin="10,10,10,10" HorizontalAlignment="Center">
-            <Button x:Name="btnAddFiles" Content="Ajouter des fichiers CSV" Margin="0,0,10,0" Click="btnAddFiles_Click"></Button>
-            <Button x:Name="btnDeleteFiles" Content="Supprimer" Margin="0, 0, 10, 0" Click="btnDeleteFiles_Click"></Button>
-            <Button x:Name="btnClose" Content="Fermer"></Button>
+        <StackPanel Orientation="Horizontal" Margin="10,10,10,10" HorizontalAlignment="Right">
+            <Label Name="lblInfoImport" Margin="10,0,10,0">Aucun fichier à importer</Label>
+            <Button x:Name="btnAddFiles" Content="Ajouter des fichiers" Margin="0,0,10,0" Padding="5,5,5,5" Click="btnAddFiles_Click"></Button>
+            <Button x:Name="btnImportFiles" Content="Importer" Margin="0, 0, 10, 0" Padding="5,5,5,5" Click="btnImportFiles_Click" IsEnabled="False"></Button>
         </StackPanel>
         <StackPanel Orientation="Vertical">
-            <StackPanel Orientation="Horizontal">
-                <Label>N° Groupe :</Label>
-                <Label Name="lblNumGroup" Width="10" Margin="0,0,50,0"></Label>
-                <Label>Ordre de passage :</Label>
-                <Label Name="lblOrdrePassage" Width="10"/>
-            </StackPanel>
-            <ProgressBar Name="pbImportFiles" Height="20" Margin="10,10,10,10" Minimum="0"></ProgressBar>
-
+            <ProgressBar Name="pbImportFiles" Height="20" Margin="10,0,10,10" Minimum="0"></ProgressBar>
         </StackPanel>
     </StackPanel>
 </Window>
