--- a/ShaBiDi/Views/MainWindow.xaml
+++ b/ShaBiDi/Views/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:ShaBiDi.Properties"
-        Title="ShaBiDi | DataViz Tool" Name="WelcomeWindow" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
+        Title="ShaBiDi DataViz Tool" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" Icon="/ShaBiDi;component/Resources/icon.ico">
     <StackPanel Name="spMainMenu">
         <Grid>
             <Grid.ColumnDefinitions>
@@ -12,39 +12,48 @@
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
-            <StackPanel Grid.Column="0" Margin="10,10,10,10">
+            <Image Grid.Column="0" Source="/ShaBiDi;component/Resources/icon.png" Width="70" Margin="10,0,0,0"></Image>
+            <StackPanel Grid.Column="1" Margin="5,10,20,10">
                 <TextBlock FontFamily="Arial" FontSize="40" HorizontalAlignment="Left">ShaBiDi</TextBlock>
                 <TextBlock FontFamily="Arial" FontSize="20" FontWeight="ExtraLight" HorizontalAlignment="Right">DataViz Tool</TextBlock>
             </StackPanel>
-            <Button Grid.Column="1" HorizontalAlignment="Right" HorizontalContentAlignment="Right" x:Name="btnImport" Background="#00000000" BorderBrush="#00000000" Click="btnImport_Click" Margin="10,10,10,10">
+            <Button Grid.Column="2" HorizontalAlignment="Right" HorizontalContentAlignment="Right" x:Name="btnImport" Background="#00000000" BorderBrush="#00000000" Click="btnImport_Click" Margin="10,10,10,10">
                 <StackPanel Height="Auto">
                     <Image Source="/ShaBiDi;component/Resources/box-in.png" Height="50" />
-                    <TextBlock HorizontalAlignment="Center" FontSize="15">Importer</TextBlock>
+                    <TextBlock HorizontalAlignment="Center" FontSize="15" FontFamily="Arial">Importer</TextBlock>
                 </StackPanel>
             </Button>
-            <Button Grid.Column="2" HorizontalAlignment="Right" HorizontalContentAlignment="Right" x:Name="btnSave" Background="#00000000" BorderBrush="#00000000" Margin="10,10,10,10">
+            <Button Grid.Column="3" HorizontalAlignment="Right" HorizontalContentAlignment="Right" x:Name="btnSave" Background="#00000000" BorderBrush="#00000000" Margin="10,10,10,10" Click="btnSave_Click">
                 <StackPanel Height="Auto">
                     <Image Source="/ShaBiDi;component/Resources/floppy.png" Height="50" />
-                    <TextBlock HorizontalAlignment="Center" FontSize="15">Sauvegarder</TextBlock>
+                    <TextBlock HorizontalAlignment="Center" FontSize="15" FontFamily="Arial">Sauvegarder</TextBlock>
                 </StackPanel>
             </Button>
-            <Button Grid.Column="3" HorizontalAlignment="Right" x:Name="btnExport" Background="#00000000" BorderBrush="#00000000" Margin="10,10,10,10" Click="btnExport_Click">
+            <Button Grid.Column="4" HorizontalAlignment="Right" HorizontalContentAlignment="Right" x:Name="btnOpen" Background="#00000000" BorderBrush="#00000000" Margin="10,10,10,10" Click="btnOpen_Click">
+                <StackPanel Height="Auto">
+                    <Image Source="/ShaBiDi;component/Resources/folder.png" Height="50"></Image>
+                    <TextBlock HorizontalAlignment="Center" FontSize="15" FontFamily="Arial">Ouvrir</TextBlock>
+                </StackPanel>
+            </Button>
+            <Button Grid.Column="5" HorizontalAlignment="Right" x:Name="btnExport" Background="#00000000" BorderBrush="#00000000" Margin="10,10,10,10" Click="btnExport_Click">
                 <StackPanel Height="Auto">
                     <Image Source="/ShaBiDi;component/Resources/file-excel.png" Height="50"/>
-                    <TextBlock HorizontalAlignment="Center" FontSize="15">Extraire</TextBlock>
+                    <TextBlock HorizontalAlignment="Center" FontSize="15" FontFamily="Arial">Extraire</TextBlock>
                 </StackPanel>
             </Button>
-            <Button Grid.Column="4" x:Name="btnCompare" Background="#00000000" BorderBrush="#00000000" Margin="10,10,10,10" Click="btnCompare_Click">
+            <Button Grid.Column="6" x:Name="btnCompare" Background="#00000000" BorderBrush="#00000000" Margin="10,10,10,10" Click="btnCompare_Click">
                 <StackPanel Height="Auto">
                     <Image Source="/ShaBiDi;component/Resources/filter.png" Height="50"/>
-                    <TextBlock HorizontalAlignment="Center" FontSize="15">Comparer</TextBlock>
+                    <TextBlock HorizontalAlignment="Center" FontSize="15" FontFamily="Arial">Comparer</TextBlock>
                 </StackPanel>
             </Button>
-            <Button Grid.Column="5" x:Name="btnAdd" Background="#00000000" BorderBrush="#00000000" Click="btnAdd_Click" Margin="10,10,10,10">
+            <Button Grid.Column="7" x:Name="btnAdd" Background="#00000000" BorderBrush="#00000000" Click="btnAdd_Click" Margin="10,10,10,10">
                 <StackPanel Height="Auto">
                     <Image Source="/ShaBiDi;component/Resources/sign-add.png" Height="50"/>
-                    <TextBlock HorizontalAlignment="Center" FontSize="15">Ajouter</TextBlock>
+                    <TextBlock HorizontalAlignment="Center" FontSize="15" FontFamily="Arial">Ajouter</TextBlock>
                 </StackPanel>
             </Button>
         </Grid>
