--- a/ShaBiDi/Views/ImportWindow.xaml
+++ b/ShaBiDi/Views/ImportWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="ShaBiDi.Views.ImportWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Importation de fichiers" Height="400" Width="600" ResizeMode="NoResize" Closing="Window_Closing">
+        Title="Importation de fichiers" Height="400" Width="600" ResizeMode="NoResize" Closing="Window_Closing" Icon="/ShaBiDi;component/Resources/icon.ico">
     <StackPanel Margin="0,0,0,0">
         <TextBlock Margin="10,10,10,5" FontWeight="Bold" FontSize="14">Importation de fichiers</TextBlock>
         <ListBox x:Name="lbImportedFiles" Height="200" ItemsSource="{Binding}" SelectionMode="Multiple" Margin="10,10,10,10">
