--- a/ShaBiDi/Views/CompareIndicWindow.xaml
+++ b/ShaBiDi/Views/CompareIndicWindow.xaml
@@ -1,23 +1,20 @@
 ﻿<Window x:Class="ShaBiDi.Views.CompareIndicWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="CompareIndicWindow" Height="300" Width="300" Loaded="Window_Loaded">
+        Title="Comparaison d'indicateurs" Height="300" Width="300" Loaded="Window_Loaded" ResizeMode="NoResize" Icon="/ShaBiDi;component/Resources/icon.ico" Closing="Window_Closing">
     <StackPanel>
+        <TextBlock Margin="10,10,10,5" FontWeight="Bold" FontSize="14">Comparaison d'indicateurs</TextBlock>
         <Label Content="Sélectionnez le premier indicateur :" />
-        <ComboBox Margin="10,0,10,0" Name="cbSelectIndic1">
+        <ComboBox Margin="10,0,10,0" Name="cbSelectIndic1" SelectionChanged="cbSelectIndic1_SelectionChanged">
         </ComboBox>
         <Label Content="Sélectionnez le deuxième indicateur :" />
         <ComboBox Margin="10,0,10,0" Name="cbSelectIndic2"></ComboBox>
         <Label Content="Mode comparaison :" />
         <ComboBox Margin="10,0,10,0" Name="cbSelectModeComp" SelectedValuePath="Content">
-            <ComboBoxItem Content="Addition"></ComboBoxItem>
-            <ComboBoxItem Content="Soustraction"></ComboBoxItem>
-            <ComboBoxItem Content="Moyenne"></ComboBoxItem>
         </ComboBox>
            
         <StackPanel HorizontalAlignment="Right" Margin="10" Orientation="Horizontal">
-            <Button Click="btnCreateCompareIndic_Click" Content="Ok" Margin="10" Name="btnCreateCompareIndic" />
-            <Button Content="Annuler" Margin="10" />
+            <Button Click="btnCreateCompareIndic_Click" Content="Comparer les indicateurs" Margin="10" Name="btnCreateCompareIndic" Padding="5,5,5,5"/>
         </StackPanel>
     </StackPanel>
 </Window>
