--- a/ShaBiDi/Views/CreateIndicWindow.xaml
+++ b/ShaBiDi/Views/CreateIndicWindow.xaml
@@ -1,17 +1,16 @@
 ﻿<Window x:Class="ShaBiDi.Views.CreateIndicWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Création d'indicateur" Height="372" Width="400" ResizeMode="NoResize" Icon="/ShaBiDi;component/Resources/icon.ico">
+        Title="Création d'indicateur" Height="410" Width="400" ResizeMode="NoResize" Icon="/ShaBiDi;component/Resources/icon.ico" Closing="Window_Closing">
     <StackPanel>
         <TextBlock Margin="10,10,10,5" FontWeight="Bold" FontSize="14">Création d'indicateur</TextBlock>
         <Label Content="Sélectionnez l'indicateur que vous souhaitez créer :" Margin="10,0,0,0">
         </Label>
-        <ComboBox Name="cbSelectIndic" Margin="10,0,10,0">
-            <ComboBoxItem IsSelected="True">Taux de recouvrement</ComboBoxItem>
-            <ComboBoxItem>Densité de recouvrement (transparence)</ComboBoxItem>
-            <ComboBoxItem>Densité de recouvrement (couleur)</ComboBoxItem>
-            <ComboBoxItem>Dispersion PA</ComboBoxItem>
-            <ComboBoxItem>Nombre d'allers retours bandeau / image</ComboBoxItem>
+        <ComboBox x:Name="cbSelectIndic" Margin="10,0,10,0" SelectionChanged="cbSelectIndic_SelectionChanged">
+            <ComboBoxItem IsSelected="True" Content="Taux de recouvrement"/>
+            <ComboBoxItem Content="Densité de recouvrement"/>
+            <ComboBoxItem Content="Dispersion PA"/>
+            <ComboBoxItem Content="Nombre d'allers retours bandeau / image"/>
         </ComboBox>
         <StackPanel Orientation="Horizontal" Margin="10,10,0,0">
             <Label Content="User :"></Label>
@@ -31,12 +30,11 @@
         </StackPanel>
         <StackPanel Orientation="Horizontal" Margin="10,0,0,0">
             <Label Content="Groupe :"></Label>
-            <ListBox x:Name ="lbGroup" Width="300" Height="100" Margin="10,10,0,0" ItemsSource="{Binding}" SelectionMode="Multiple" SelectionChanged="lbGroup_SelectionChanged"/>
+            <ListBox x:Name ="lbGroup" Width="300" Height="100" Margin="10,10,0,0" SelectionMode="Multiple" SelectionChanged="lbGroup_SelectionChanged">
+            </ListBox>
         </StackPanel>
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="10">
-            <Button x:Name="btnCreateIndic" Content="Ok" Margin="10" Padding="5,5,5,5" Click="btnCreateIndic_Click"></Button>
-            <Button Content="Annuler" Margin="10" Padding="5,5,5,5"></Button>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="10,10,10,10">
+            <Button x:Name="btnCreateIndic" Content="Créer l'indicateur" Margin="10" Padding="5,5,5,5" Click="btnCreateIndic_Click"></Button>
         </StackPanel>
-
     </StackPanel>
 </Window>
