--- a/ShaBiDi/Views/ExtractWindow.xaml
+++ b/ShaBiDi/Views/ExtractWindow.xaml
@@ -1,15 +1,18 @@
 ﻿<Window x:Class="ShaBiDi.Views.ExtractWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Extraction des données d'un indicateur" Height="250" Width="300" Loaded="Window_Loaded">
+        Title="Extraction des données d'un indicateur" Height="250" Width="300" Loaded="Window_Loaded" ResizeMode="NoResize" Icon="/ShaBiDi;component/Resources/icon.ico" Closing="Window_Closing">
     <StackPanel>
+        <TextBlock Margin="10,10,10,5" FontWeight="Bold" FontSize="14">Extraction des données</TextBlock>
         <Label Content="Sélectionner un indicateur : "></Label>
-        <ComboBox Name="cbSelectIndicateur" Margin="10,10,10,10"></ComboBox>
+        <ComboBox Name="cbSelectIndicateur" Margin="10,0,10,10"></ComboBox>
         <Label Content="Sélectionner l'emplacement du fichier : "></Label>
         <StackPanel Orientation="Horizontal">
-            <TextBox Name="tbSelectedPath" Margin="10,10,0,10" Width="180"></TextBox>
-            <Button Content="Sélectionner" Margin="10,10,10,10" x:Name="btnSelectFiles" Click="btnSelectFiles_Click"/>
+            <TextBox Name="tbSelectedPath" Margin="10,0,0,10" Width="180" Height="20"></TextBox>
+            <Button Content="Sélectionner" Margin="10,0,0,10" x:Name="btnSelectFiles" Click="btnSelectFiles_Click" Padding="5,5,5,5"/>
         </StackPanel>
-        <Button x:Name="btnExtract" Content="Extraire" Margin="10,10,10,10" Click="btnExtract_Click"/>
+        <StackPanel HorizontalAlignment="Right" Margin="10" Orientation="Horizontal">
+        <Button x:Name="btnExtract" Content="Extraire les données" Click="btnExtract_Click" Padding="5,5,5,5"/>
+    </StackPanel>
     </StackPanel>
 </Window>
